--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
 
   <body>
-    <p>peepee</p>
+    <h1>welcome to the jungle</h1>
+    <p>we've got peepeepee</p>
   </body>
 </html>
 </DOCTYPE>
