--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang=en>
   <head>
     <style>
-      
+      h1{
+        font-family: georgia;
+        color: slateblue;
     </style>
   </head>
 
   <body>
-    <h1>welcome to the jungle</h1>
-    <p>we've got peepeepee</p>
+    <p>peepee</p>
   </body>
 </html>
 </DOCTYPE>
