--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=en>
   <head>
     <style>
-      p{
+      h1{
         font-family: georgia;
         color: slateblue;
       }
@@ -10,6 +10,6 @@
   </head>
 
   <body>
-    <p>peepee</p>
+    <h1>peepee</h1>
   </body>
 </html>
