--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>peepoo</title>
     <style>
+      body{
+        background-color: yellow;
+      }
       h1{
         font-family: georgia;
         color: slateblue;
