--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>peepoo</title>
     <style>
       body{
-        background-color: yellow;
+        background-color: #fff700;
       }
       h1{
         font-family: georgia;
