--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       }
       h1{
         font-family: georgia;
-        color: slateblue;
+        color: brown;
       }
     </style>
   </head>
