--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         font-family: georgia;
         color: brown;
       }
+      p{
+        color: brown;
+      }
     </style>
   </head>
 
