--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang=en>
   <head>
-    <title>peepoo</title>
+    <title>Abby's Portfolio</title>
     <style>
       body{
-        background-color: #fff700;
+        background-color: #fca52b;
       }
       h1{
         font-family: georgia;
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <h1>peepee</h1>
-    <p>welcome</p>
+    <h1>Abby's Website</h1>
+    <p>welcome to the bungle</p>
   </body>
 </html>
