--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Abby's Portfolio</title>
     <style>
       body{
-        background-color: #fca52b;
+        background-color: #d6fc2b;
       }
       h1{
         font-family: georgia;
