--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       h1{
         font-family: georgia;
         color: brown;
+        text-alignment: center;
       }
       p{
         color: brown;
