--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
       }
       h1{
         font-family: georgia;
-        color: brown;
+        color: slateblue;
         text-alignment: center;
       }
       p{
-        color: brown;
+        color: slateblue;
         font-family: georgia;
       }
+      nav{
+        
     </style>
   </head>
 
   <body>
     <h1>Abby's Website</h1>
     <p>welcome to the bungle</p>
+    
   </body>
 </html>
