--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       h1{
         font-family: georgia;
         color: slateblue;
-        text-alignment: center;
+        text-align: center;
       }
       p{
         color: slateblue;
