--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         font-family: georgia;
         color: slateblue;
         text-align: center;
+        text-shadow: 2px 2px sandybrown;
       }
       p{
         color: slateblue;
