--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <body>
     <h1>Abby's Website</h1>
-    <p>welcome to the bungle</p>
+    <p><style text-align:center>welcome to the bungle</style></p>
     <br>
     <a href="https://youtu.be/dQw4w9WgXcQ?si=ATgKfFmtPECeTwEn">yooooo check this shit out</a>
     
