--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         text-align: center;
         text-shadow: 2px 2px sandybrown;
       }
-      p{
+      h2{
         color: slateblue;
         font-family: georgia;
+        text-align: center;
       }
       nav{
         
@@ -23,7 +24,7 @@
 
   <body>
     <h1>Abby's Website</h1>
-    <p><style text-align:center>welcome to the bungle</style></p>
+    <h2>welcome to the bungle</h2>
     <br>
     <a href="https://youtu.be/dQw4w9WgXcQ?si=ATgKfFmtPECeTwEn">yooooo check this shit out</a>
     
