--- a/project.html
+++ b/project.html
@@ -2,7 +2,22 @@
 <html>
 
 <head>
-
+  <style>
+ body{
+        background-color: #c1ed61;
+      }
+      h1{
+        font-family: georgia;
+        color: slateblue;
+        text-align: center;
+        text-shadow: 2px 2px sandybrown;
+      }
+      h2{
+        color: slateblue;
+        font-family: georgia;
+        text-align: center;
+      }
+    </style>
 </head>
 
 <body>
