--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <h2>welcome to the bungle</h2>
     <br>
     <a href="https://youtu.be/dQw4w9WgXcQ?si=ATgKfFmtPECeTwEn">yooooo check this shit out</a>
+    <a href="project.html">My Project</a>
     
   </body>
 </html>
