--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a href="https://youtu.be/dQw4w9WgXcQ?si=ATgKfFmtPECeTwEn">yooooo check this shit out</a>
    <br>
     <a href="project.html">My Project</a>
-    <img src="LEMIEUX (2).png" alt=my dumbass logo width=500>
+    <img src="LEMIEUX (2).png" alt="my dumbass logo" width="500">
     
   </body>
 </html>
