--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <img src="LEMIEUX (2).png" alt="my dumbass logo" width="200">
     <br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/9bZkp7q19f0?si=6auluRgVt4jHwM7v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    
+    <br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/X_XGxzMrq04?si=iRCoMHeoT1FRJ2db" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </body>
 </html>
