--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         font-family: georgia;
         color: slateblue;
         text-align: center;
-        text-shadow: 2px 2px sandybrown;
+        text-shadow: 2px 2px powderblue;
       }
       h2{
         color: slateblue;
